<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/nestedScrollView">

        <RelativeLayout
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.luiz.tp1.MainActivity"
            tools:showIn="@layout/activity_main">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.04"
                        android:text="@string/texto"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="26sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="24dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/hint_nome"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="13dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_nasc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/nascimento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/hint_nascimento"
                            android:inputType="date" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="13dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_tel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/hint_telefone"
                            android:inputType="phone" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="13dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="13dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/endereco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/hint_endereco"
                            android:inputType="textPostalAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                    <Button
                        android:id="@+id/addContato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_add_contato" />

                    <Button
                        android:id="@+id/pesqEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_pesq_endereco" />

                    <Button
                        android:id="@+id/anivesario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_salvar_aniversario" />

                    <Button
                        android:id="@+id/whatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_enviar_whatsapp" />

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="69dp"
        android:layout_height="78dp"
        android:layout_gravity="center_vertical|left"
        android:clickable="true"
        android:onClick="segundaTela"
        app:backgroundTint="@color/verde"
        app:fabSize="normal"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="top|right"
        app:srcCompat="@drawable/next" />
</android.support.design.widget.CoordinatorLayout>